compiler/testData/multiplatform/incompatibleClasses/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/incompatibleClasses/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class PClass
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:2:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect interface PInterface
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:3:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect object PObject
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:4:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect enum class PEnumClass
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:5:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect annotation class PAnnotationClass
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:7:10: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
internal expect object InternalObject
         ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:8:8: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
public expect object PublicObject
       ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:10:6: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
open expect class OpenClass
     ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:11:10: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
abstract expect class AbstractClass
         ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:12:7: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
final expect class FinalClass
      ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:14:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C1<A>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:15:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C2<B>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:16:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C3<D, E : D>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:18:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C4<F>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:21:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect abstract class ExtendsNumber : Number
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:23:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect fun interface FunInterface {
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:27:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect fun interface FunInterface2 {
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:1:18: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class PClass : Any
  actual: public abstract actual interface PClass : Any
  reason: the class kinds are different (class, interface, object, enum, annotation)
actual interface PClass
                 ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:1:18: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class PClass : Any
  actual: public abstract actual interface PClass : Any
  reason: the modalities are different ('final' vs 'abstract')
actual interface PClass
                 ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:2:15: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public abstract expect interface PInterface : Any
  actual: public final actual object PInterface : Any
  reason: the class kinds are different (class, interface, object, enum, annotation)
actual object PInterface
              ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:2:15: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public abstract expect interface PInterface : Any
  actual: public final actual object PInterface : Any
  reason: the modalities are different ('abstract' vs 'final')
actual object PInterface
              ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:3:19: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect object PObject : Any
  actual: public final actual enum class PObject : Enum<PObject>
  reason: the class kinds are different (class, interface, object, enum, annotation)
actual enum class PObject
                  ^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:4:25: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect enum class PEnumClass : Enum<PEnumClass>
  actual: public final actual annotation class PEnumClass : Annotation
  reason: the class kinds are different (class, interface, object, enum, annotation)
actual annotation class PEnumClass
                        ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:4:25: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect enum class PEnumClass : Enum<PEnumClass>
  actual: public final actual annotation class PEnumClass : Annotation
  reason: some supertypes are missing in the 'actual' declaration
actual annotation class PEnumClass
                        ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:5:14: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect annotation class PAnnotationClass : Annotation
  actual: public final actual class PAnnotationClass : Any
  reason: the class kinds are different (class, interface, object, enum, annotation)
actual class PAnnotationClass
             ^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:5:14: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect annotation class PAnnotationClass : Annotation
  actual: public final actual class PAnnotationClass : Any
  reason: some supertypes are missing in the 'actual' declaration
actual class PAnnotationClass
             ^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:7:24: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect object PublicObject : Any
  actual: internal final actual object PublicObject : Any
  reason: the visibilities are different
internal actual object PublicObject
                       ^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:10:20: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public open expect class OpenClass : Any
  actual: public final actual class OpenClass : Any
  reason: the modalities are different ('open' vs 'final')
final actual class OpenClass
                   ^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:11:19: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public abstract expect class AbstractClass : Any
  actual: public open actual class AbstractClass : Any
  reason: the modalities are different ('abstract' vs 'open')
open actual class AbstractClass
                  ^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:12:23: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class FinalClass : Any
  actual: public abstract actual class FinalClass : Any
  reason: the modalities are different ('final' vs 'abstract')
abstract actual class FinalClass
                      ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:14:14: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class C1<A> : Any
  actual: public final actual class C1<A, Extra> : Any
  reason: the number of type parameters are different
actual class C1<A, Extra>
             ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:15:14: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class C2<B> : Any
  actual: public final actual class C2<out B> : Any
  reason: declaration-site variances of type parameters are different
actual class C2<out B>
             ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:16:14: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class C3<D, E : D> : Any
  actual: public final actual class C3<D, E : D?> : Any
  reason: the upper bounds of type parameters are different
actual class C3<D, E : D?>
             ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:18:18: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class C4<F> : Any
  actual: public final actual typealias C4<F> = C4Impl<F>
  reason: the upper bounds of type parameters are different
actual typealias C4<F> = C4Impl<F>
                 ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:21:23: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public abstract expect class ExtendsNumber : Number
  actual: public abstract actual class ExtendsNumber : Any
  reason: some supertypes are missing in the 'actual' declaration
actual abstract class ExtendsNumber : Any()
                      ^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:21:23: error: 'actual class ExtendsNumber : Any' has no corresponding members for expected class members:

    fun toDouble(): Double

    fun toFloat(): Float

    fun toLong(): Long

    fun toInt(): Int

    fun toChar(): Char

    fun toShort(): Short

    fun toByte(): Byte

actual abstract class ExtendsNumber : Any()
                      ^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:23:18: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public abstract expect fun interface FunInterface : Any
  actual: public abstract actual interface FunInterface : Any
  reason: the 'actual' declaration for 'fun expect interface' is not a functional interface
actual interface FunInterface {
                 ^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:31:18: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public abstract expect fun interface FunInterface2 : Any
  actual: public final actual typealias FunInterface2 = FunInterface2Typealias
  reason: the 'actual' declaration for 'fun expect interface' is not a functional interface
actual typealias FunInterface2 = FunInterface2Typealias
                 ^^^^^^^^^^^^^
